# metagenomicsOS

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  config.json  config.yaml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/issue_templates/: question.yml
.github/workflows/: ci.yml  test.yml
src/metagenomicsOS/: __init__.py  __main__.py
src/metagenomicsOS/cli/: __init__.py  __main__.py  main.py
src/metagenomicsOS/cli/commands/: __init__.py  _stubs.py  annotate.py  assembly.py  benchmark.py  binning.py  compare.py  config.py  database.py  genes.py  ml.py  monitor.py  optimize.py  plugin.py  plugins.py  qc.py  report.py  resistance.py  run.py  taxonomy.py  validate.py  visualize.py
src/metagenomicsOS/cli/core/: __init__.py  config_model.py  context.py  logging.py
src/metagenomicsOS/core/: __init__.py  analysis.py  config_manager.py  data_models.py  data_processing.py  exceptions.py  project.py  reporting.py  utils.py
tests/unit/: test_core_data_models.py  test_exceptions.py
